[gd_scene load_steps=2 format=2]

[ext_resource path="res://Hitboxes + Hurtboxes/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="invulnerability_ended" from="." to="." method="_on_Hurtbox_invulnerability_ended"]
[connection signal="invulnerability_started" from="." to="." method="_on_Hurtbox_invulnerability_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
